Add some stuff to the API, some other stuff in the views. Nothing too hardcore, but I'm committing before I screw something up.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -159,9 +159,15 @@ header{
   text-transform: capitalize;
   box-sizing: content-box;
 }
-.cost-list{
-  list-style: none;
+
+/* Events List Styles */
+.events-list-table td{
+  max-width: 0px;
+  white-space: nowrap;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
 }
+
 
 /* Angular Animations */
 .view.ng-enter{
