--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -168,6 +168,12 @@ header{
   text-overflow: ellipsis !important;
 }
 
+#locationSelect {
+  width:100%;
+  height: 200px;
+  margin-bottom: 20px;
+}
+
 
 /* Angular Animations */
 .view.ng-enter{
