Redesign input form for creating events.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -200,3 +200,6 @@ header{
 .page-list {
   margin: 0 auto !important;
 }
+
+/* Valores para la directiva de mapas de Google */
+.angular-google-map-container { height: 200px; }
